--- a/pod.yaml
+++ b/pod.yaml
@@ -1,20 +1,25 @@
 apiVersion: v1
 kind: "Pod"
 metadata:
-  name: couchbase-kafka-connector
+  name: couchbase-kafka-connect-test
 spec:
   containers:
-    - name: couchbase-kafka-connector-test
-      image: dockerhub.rnd.amadeus.net:5000/couchbase-kafka-connector-test:latest
-    - env:
-      - name: COUCHBASE_NODES
-        value: cb-fares
-      - name: COUCHBASE_BUCKET
-        value: "travel-sample"
-      - name: KAFKA_TOPIC
-        value: "cb-connector-test"
-      - name: COUCHBASE_FROM_TO
-        value: "SAVED_OFFSET_OR_NOW"
+    - name: couchbase-kafka-connect-test
+      image: audhumla/couchbase-kafka-connect-test:test
+      env:
+        - name: COUCHBASE_NODES
+          value:  couchbase
+        - name: COUCHBASE_BUCKET
+          value: "travel-sample"
+        - name: KAFKA_TOPIC
+          value: "cb-connector-test"
+        - name: COUCHBASE_FROM_TO
+          value: "SAVED_OFFSET_OR_NOW"
+        - name: CONNECT_BOOTSTRAP_SERVERS
+          value: my-cluster-kafka-bootstrap
+        - name: CONNECT_REST_ADVERTISED_HOST_NAME
+          value: "kafka-couchbase-connector-test"
+        - name: CONNECTOR_NAME
+          value: "couchbase-kafka-connector-test"
 
-  
 
