--- a/cb-endpoint.yaml
+++ b/cb-endpoint.yaml
@@ -1,2 +1,26 @@
-{"apiVersion": "v1","kind": "Endpoints","metadata": {"name": "couchbase"},"subsets": [{"addresses": [{"ip": "<cb-cluster-ip>"}],"ports": [{"port": "8091", "name": "admin"},  {"port":"11210", "name": "bucket"}]}]}
-
+{
+  "apiVersion": "v1",
+  "kind": "Endpoints",
+  "metadata": {
+    "name": "couchbase"
+  },
+  "subsets": [
+    {
+      "addresses": [
+        {
+          "ip": "<cb-cluster-ip>"
+        }
+      ],
+      "ports": [
+        {
+          "port": "8091",
+          "name": "admin"
+        },
+        {
+          "port": "11210",
+          "name": "bucket"
+        }
+      ]
+    }
+  ]
+}
