--- a/pod.yaml
+++ b/pod.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
     - name: couchbase-kafka-connect-test
-      image: audhumla/couchbase-kafka-connect-test:test
+      image: audhumla/couchbase-kafka-connect-test:0.2-test
       env:
         - name: COUCHBASE_NODES
           value:  "couchbase"
