docker version update in the pod blueprint

--- a/cb-endpoint.yaml
+++ b/cb-endpoint.yaml
@@ -8,7 +8,7 @@
     {
       "addresses": [
         {
-          "ip": "172.16.230.2"
+          "ip": "<cb-cluster-ip>"
         }
       ],
       "ports": [
